basics of all pages built

--- a/index.html
+++ b/index.html
@@ -21,12 +21,38 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-6">
           <div class="form-group">
-            <label for=""></label>
-            <input type="text" class="form-control" id="" placeholder="">
+            <fieldset>
+              <label for="">How old are you?</label>
+              <input type="number" class="form-control" id="" placeholder="" required min="13">
+              </br>
+            </fieldset>
+            <fieldset>
+            <label for="">Enter Your Email</label>
+            <input type="email" class="form-control" id="" placeholder="">
+            </br> </br>
+            </fieldset>
+            <fieldset>
+            <button type="submit" class="btn btn-primary btn-lg btn-block" id="fightPirates">Go Fight Some Pirates!</button>
+            </br>
+            </fieldset>
           </div>
         </div>
+        <div class="row">
+          <div class="col-md-6">
+            <!-- <div class="row">
+              <div class="col-md-12">
+                <iframe src="http://giphy.com/embed/TE3ZlXmfr5psI?html5=true" width="480" height="199" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="http://giphy.com/gifs/pirates-of-the-caribbean-johnny-depp-TE3ZlXmfr5psI"></a></p>
+              </div>
+            </div> -->
+            <div class="row">
+              <div class="col-md-12">
+                <iframe src="http://giphy.com/embed/AhvON0KvGMA6Y?html5=true" width="480" height="345" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="http://giphy.com/gifs/disney-peter-pan-captain-hook-AhvON0KvGMA6Y"></a></p>
+              </div>
+            </div>
+
+          </div>
       </div>
 
 
