--- a/win.html
+++ b/win.html
@@ -12,14 +12,20 @@
 
   <body>
     <div class="container">
-      <div class="page-header">
-        <h1 class="win">You Won!<small>You know you want to.</small></h1>
-      </div>
       <div class="row">
         <div class="col-md-12">
-          <img src="http://www.lorempixel.com/940/200/" alt="">
+          <p class="talkingToPlayer">nice swabbing skills.</p>
+          <p class="won">YOU WON!</p>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
+          <button href="game.html" type="submit" class="btn btn-primary btn-lg btn-block" id="fightPirates">Fight Again!</button>
+        </div>
+        <div class="col-md-4"></div>
+      </div>
+    </div>
 
 
 <!-- Nice to have - links to social media (poss with message pre-populated) -->
@@ -31,13 +37,14 @@
           </p>
         </div>
       </div> -->
-      <div class="row">
+      <!-- Footer - maybe not on win/lose pages -->
+      <!-- <div class="row">
         <div class="col-md-12 text-center"><p><small>&copy; Swab the decks.</small></p>
         </div>
         <div class="col-md-12 text-center"><p><small>Walking the plank in Seattle.</small></p>
         </div>
       </div>
-    </div>
+    </div> -->
     <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
