--- a/index.html
+++ b/index.html
@@ -11,17 +11,51 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-default navbar-static-top" role="navigation">
+      <div class="container-fluid">
+        <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+        <div class="collapse navbar-collapse" id="navbar">
+          <ul class="nav navbar-nav">
+            <li><a href="">For Development Purposes Only</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="index.html">Index.html</a></li>
+            <li><a href="game.html">game.html</a></li>
+            <li><a href="win.html">win.html</a></li>
+            <li><a href="lose.html">lose.html</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-->
+    </nav>
     <div class="container">
       <div class="page-header">
         <h1>Swab the decks and sink some ships. <small>You know you want to.</small></h1>
       </div>
       <div class="row">
-        <div class="col-md-12">
-          <h2>First some questions... <small></small></h2>
-        </div>
-      </div>
-      <div class="row">
+        <!-- <div class="row"> -->
+          <div class="col-md-6">
+            <!-- <div class="row">
+              <div class="col-md-12">
+                <iframe src="http://giphy.com/embed/TE3ZlXmfr5psI?html5=true" width="480" height="199" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="http://giphy.com/gifs/pirates-of-the-caribbean-johnny-depp-TE3ZlXmfr5psI"></a></p>
+              </div>
+            </div> -->
+            <div class="row">
+              <div class="col-md-12">
+                <iframe src="http://giphy.com/embed/AhvON0KvGMA6Y?html5=true" width="450" height="345" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="http://giphy.com/gifs/disney-peter-pan-captain-hook-AhvON0KvGMA6Y"></a></p>
+              </div>
+            </div>
+          </div>
+      <!-- </div> -->
         <div class="col-md-6">
+          <h2>First some questions... <small></small></h2>
           <div class="form-group">
             <fieldset>
               <label for="">How old are you?</label>
@@ -34,26 +68,14 @@
             </br> </br>
             </fieldset>
             <fieldset>
-            <button type="submit" class="btn btn-primary btn-lg btn-block" id="fightPirates">Go Fight Some Pirates!</button>
+            <button href="/win.html"
+            type="submit" class="btn btn-primary btn-lg btn-block" id="fightPirates">Go Fight Some Pirates!</button>
+            <a href="game.html"></a>
             </br>
             </fieldset>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-6">
-            <!-- <div class="row">
-              <div class="col-md-12">
-                <iframe src="http://giphy.com/embed/TE3ZlXmfr5psI?html5=true" width="480" height="199" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="http://giphy.com/gifs/pirates-of-the-caribbean-johnny-depp-TE3ZlXmfr5psI"></a></p>
-              </div>
-            </div> -->
-            <div class="row">
-              <div class="col-md-12">
-                <iframe src="http://giphy.com/embed/AhvON0KvGMA6Y?html5=true" width="480" height="345" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="http://giphy.com/gifs/disney-peter-pan-captain-hook-AhvON0KvGMA6Y"></a></p>
-              </div>
-            </div>
 
-          </div>
-      </div>
 
 
 <!-- Nice to have - links to social media (poss with message pre-populated) -->
