--- a/win.html
+++ b/win.html
@@ -11,6 +11,29 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-default navbar-static-top" role="navigation">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+        <div class="collapse navbar-collapse" id="navbar">
+          <ul class="nav navbar-nav">
+            <li><a href="">For Development Purposes Only</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="index.html">Index.html</a></li>
+            <li><a href="game.html">game.html</a></li>
+            <li><a href="win.html">win.html</a></li>
+            <li><a href="lose.html">lose.html</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-->
+    </nav>
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -21,7 +44,8 @@
       <div class="row">
         <div class="col-md-4"></div>
         <div class="col-md-4">
-          <button href="game.html" type="submit" class="btn btn-primary btn-lg btn-block" id="fightPirates">Fight Again!</button>
+          <a href="game.html"><button href="/win.html"
+          type="submit" class="btn btn-primary btn-lg btn-block" id="fightPirates">Fight Again!</button></a>
         </div>
         <div class="col-md-4"></div>
       </div>
