everything working pre-grid

--- a/game.html
+++ b/game.html
@@ -43,7 +43,9 @@
       </div>
       <!-- GAMEBOARD -->
       <div class="row">
-        <div class="col-md-12"></div>
+        <div class="col-md-12" id="ocean">
+          
+        </div>
       </div>
 
       <div class="row">
