--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="style.css"/>
     <script src="https://code.jquery.com/jquery-2.2.1.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/yeti/bootstrap.min.css">
-    <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" ></script>
   </head>
 
@@ -40,44 +39,28 @@
         <h1>Swab the decks and sink some ships. <small>You know you want to.</small></h1>
       </div>
       <div class="row">
-        <!-- <div class="row"> -->
           <div class="col-md-6">
-            <!-- <div class="row">
-              <div class="col-md-12">
-                <iframe src="http://giphy.com/embed/TE3ZlXmfr5psI?html5=true" width="480" height="199" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="http://giphy.com/gifs/pirates-of-the-caribbean-johnny-depp-TE3ZlXmfr5psI"></a></p>
-              </div>
-            </div> -->
             <div class="row">
               <div class="col-md-12">
                 <iframe src="http://giphy.com/embed/AhvON0KvGMA6Y?html5=true" width="450" height="345" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="http://giphy.com/gifs/disney-peter-pan-captain-hook-AhvON0KvGMA6Y"></a></p>
               </div>
             </div>
           </div>
-      <!-- </div> -->
         <div class="col-md-6">
           <h2>First some questions... <small></small></h2>
-          <div class="form-group">
-            <fieldset>
+          <form class="" action="game.html" method="post">
+            <div>
               <label for="">How old are you?</label>
-              <input type="number" class="form-control" id="" placeholder="" required min="13">
+              <input type="number" class="form-control" name="age" id="" placeholder="" required min="13">
               </br>
-            </fieldset>
-            <fieldset>
-            <label for="">Enter Your Email</label>
-            <input type="email" class="form-control" id="" placeholder="">
-            </br> </br>
-            </fieldset>
-            <fieldset>
-            <button href="/win.html"
-            type="submit" class="btn btn-primary btn-lg btn-block" id="fightPirates">Go Fight Some Pirates!</button>
-            <a href="game.html"></a>
-            </br>
-            </fieldset>
-          </div>
+              <label for="">Enter Your Email</label>
+              <input type="email" class="form-control" name="email" id="" placeholder="" required>
+              </br></br>
+              <button type="submit" class="btn btn-primary btn-lg btn-block" id="fightPirates">Go Fight Some Pirates!</button>
+              </br>
+            </div>
+          </form>
         </div>
-
-
-
 <!-- Nice to have - links to social media (poss with message pre-populated) -->
       <!-- <div class="row">
         <div class="col-md-12 text-center">
@@ -94,6 +77,23 @@
         </div>
       </div>
     </div>
-    <script type="text/javascript" src="script.js"></script>
+    <!-- <div class="query-params">
+      <h2>Query Params</h2>
+      <p>
+        This shows you all of the names and values that
+        have been sent to the server. (<a href="index.html">clear</a>)
+      </p>
+      <table>
+        <thead>
+          <tr>
+            <th>Field Name</th>
+            <th>Value</th>
+          </tr>
+        </thead>
+        <tbody>
+        </tbody>
+      </table>
+    </div> -->
+    <!-- <script type="text/javascript" src="script.js"></script> -->
   </body>
 </html>
