--- a/win.html
+++ b/win.html
@@ -69,6 +69,6 @@
         </div>
       </div>
     </div> -->
-    <script type="text/javascript" src="script.js"></script>
+    <!-- <script type="text/javascript" src="script.js"></script> -->
   </body>
 </html>
