--- a/game.html
+++ b/game.html
@@ -38,23 +38,186 @@
       <div class="page-header">
         <h1>Sink Some Ships! <small></small></h1>
       </div>
-      <div class="page-header">
-        <p>Gameboard goes here</p>
-      </div>
-      <!-- GAMEBOARD -->
       <div class="row">
-        <div class="col-md-12" id="ocean">
-          
+        <div class="col-md-12">
+          <div class="row ocean">
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+          </div>
+          <div class="row ocean">
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+          </div>
+          <div class="row ocean">
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+          </div>
+          <div class="row ocean">
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+          </div>
+          <div class="row ocean">
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+          </div>
+          <div class="row ocean">
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+          </div>
+          <div class="row ocean">
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+          </div>
+          <div class="row ocean">
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+          </div>
+          <div class="row ocean">
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+          </div>
+          <div class="row ocean">
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+          </div>
+          <div class="row ocean">
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+          </div>
+          <div class="row ocean">
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+            <div class="col-xs-1 gameSquare"></div>
+          </div>
         </div>
       </div>
-
+      <hr/>
       <div class="row">
         <div class="col-md-12 text-center"><p><small>&copy; Swab the decks.</small></p>
         </div>
         <div class="col-md-12 text-center"><p><small>Walking the plank in Seattle.</small></p>
         </div>
       </div>
-    </div>
+
     <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
