small changes to win and lose pages, starting on gameboard pre-branch

--- a/win.html
+++ b/win.html
@@ -39,6 +39,7 @@
         <div class="col-md-12">
           <p class="talkingToPlayer">nice swabbing skills.</p>
           <p class="won">YOU WON!</p>
+          <p class="talkingToPlayer">You sunk all the ships! What a great pirate!</p>
         </div>
       </div>
       <div class="row">
