--- a/lose.html
+++ b/lose.html
@@ -39,6 +39,7 @@
         <div class="col-md-12">
             <p class="talkingToPlayer">womp. womp.</p>
             <p class="lost">YOU LOST!</p>
+            <p class="talkingToPlayer">You didn't sink all the ships in time! You'll get them next time!</p>
         </div>
       </div>
       <div class="row">
