--- a/game.html
+++ b/game.html
@@ -38,21 +38,22 @@
       <div class="page-header">
         <h1>Sink Some Ships! <small></small></h1>
       </div>
-      <div class="row">
+      <div class="atlanticOcean"></div>
+      <!-- <div class="row">
         <div class="col-md-12">
-          <div class="row ocean">
-            <div class="col-xs-1 gameSquare"></div>
-            <div class="col-xs-1 gameSquare"></div>
-            <div class="col-xs-1 gameSquare"></div>
-            <div class="col-xs-1 gameSquare"></div>
-            <div class="col-xs-1 gameSquare"></div>
-            <div class="col-xs-1 gameSquare"></div>
-            <div class="col-xs-1 gameSquare"></div>
-            <div class="col-xs-1 gameSquare"></div>
-            <div class="col-xs-1 gameSquare"></div>
-            <div class="col-xs-1 gameSquare"></div>
-            <div class="col-xs-1 gameSquare"></div>
-            <div class="col-xs-1 gameSquare"></div>
+          <div class="row ocean y0">
+            <div class="col-xs-1 gameSquare x0"></div>
+            <div class="col-xs-1 gameSquare x1"></div>
+            <div class="col-xs-1 gameSquare x2"></div>
+            <div class="col-xs-1 gameSquare x3"></div>
+            <div class="col-xs-1 gameSquare x4"></div>
+            <div class="col-xs-1 gameSquare x5"></div>
+            <div class="col-xs-1 gameSquare x6"></div>
+            <div class="col-xs-1 gameSquare x7"></div>
+            <div class="col-xs-1 gameSquare x8"></div>
+            <div class="col-xs-1 gameSquare x9"></div>
+            <div class="col-xs-1 gameSquare x10"></div>
+            <div class="col-xs-1 gameSquare x11"></div>
           </div>
           <div class="row ocean">
             <div class="col-xs-1 gameSquare"></div>
@@ -209,7 +210,7 @@
             <div class="col-xs-1 gameSquare"></div>
           </div>
         </div>
-      </div>
+      </div> -->
       <hr/>
       <br/>
       <div class="row">
