clean up and small changes to grid

--- a/game.html
+++ b/game.html
@@ -46,7 +46,7 @@
         <div class="col-md-12 text-center"><p><small>Walking the plank in Seattle.</small></p>
         </div>
       </div>
-
+    </div>
     <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
