grid tweaks and adding space for the twitter API

--- a/game.html
+++ b/game.html
@@ -38,11 +38,16 @@
       <div class="page-header">
         <h1>Sink Some Ships! <small></small></h1>
       </div>
-      <div class="atlanticOcean"></div>
-      <hr/>
       <div class="row">
-        <div class="col-md-12 text-center"><p><small>&copy; Swab the decks.</small></p>
+        <div class="col-md-9 text-center">
+          <div class="atlanticOcean"></div>
         </div>
+        <div class="col-md-3 text-center twitterBox">Twitter API will go here.</div>
+      </div>
+      <div class="row">
+      <hr/>
+        <footer class="col-md-12 text-center"><p><small>&copy; Swab the decks.</small></p>
+        </footer>
         <div class="col-md-12 text-center"><p><small>Walking the plank in Seattle.</small></p>
         </div>
       </div>
