shapes on board and moving randomly! and not appearing if they do not fit entirely on the board!

--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
           <h2>First some questions... <small></small></h2>
           <form class="" action="game.html" method="post">
             <div>
+              <label for="">Name</label>
+              <input type="text" class="form-control" name="name" id="" placeholder="" required>
+              </br>
+              <label for="">Pirate Name (Optional)</label>
+              <input type="text" class="form-control" name="pirateName" id="" placeholder="">
+              </br>
               <label for="">How old are you?</label>
               <input type="number" class="form-control" name="age" id="" placeholder="" required min="13">
               </br>
