--- a/game.html
+++ b/game.html
@@ -39,14 +39,14 @@
         <h1>Sink Some Ships! <small></small></h1>
       </div>
       <div class="row">
-        <div class="col-md-9 text-center">
+        <div class="col-md-12 text-center">
           <div class="atlanticOcean"></div>
         </div>
-        <div class="col-md-3 text-center twitterBox">
+        <!-- <div class="col-md-3 text-center twitterBox">
           <a class="twitter-timeline" href="https://twitter.com/hashtag/talklikeapirateday" data-widget-id="707648642568433664">#talklikeapirateday Tweets</a>
           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
           </script>
-        </div>
+        </div> -->
       </div>
       <div class="row">
       <hr/>
