working version with possible parameter return in html and javascript text

--- a/win.html
+++ b/win.html
@@ -37,8 +37,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <p class="talkingToPlayer">nice swabbing skills.</p>
-          <p class="won">YOU WON!</p>
+          <p class="talkingToPlayer">nice pirate tactics.</p>
+          <p class="won">NICE JOB!</p>
           <p class="talkingToPlayer">You sunk all the ships! What a great pirate!</p>
         </div>
       </div>
