--- a/game.html
+++ b/game.html
@@ -36,8 +36,19 @@
     </nav>
     <div class="container">
       <div class="page-header">
-        <h1>Sink Some Ships! <small></small></h1>
+        <h1>Sink Some Ships!</h1>
       </div>
+      <div class="row">
+        <div class="col-md-6 text-center">
+          <div class="scoreboard">Hits!</div>
+          <div class="score hitScore"></div>
+        </div>
+        <div class="col-md-6 text-center">
+          <div class="scoreboard">Missed</div>
+          <div class="score">Number</div>
+        </div>
+      </div>
+      <hr/>
       <div class="row">
         <div class="col-md-12 text-center">
           <div class="atlanticOcean"></div>
