working version with hit/miss counters

--- a/game.html
+++ b/game.html
@@ -39,25 +39,33 @@
         <h1>Sink Some Ships!</h1>
       </div>
       <div class="row">
-        <div class="col-md-6 text-center">
-          <div class="scoreboard">Hits!</div>
-          <div class="score hitScore"></div>
-        </div>
-        <div class="col-md-6 text-center">
-          <div class="scoreboard">Missed</div>
-          <div class="score">Number</div>
+        <div class="col-md-12">
+          <p>Click on the squares to reveal whether or not you have hit a ship. Keep track of your score below. Aim carefully, it takes 20 hits to win, but if you miss 50 times in the process your crew will mutiny and your time as a sea captain will come to an end.</p>
         </div>
       </div>
       <hr/>
       <div class="row">
-        <div class="col-md-12 text-center">
+        <div class="col-md-6 text-center">
+          <div class="scoreboard">Hits!</div>
+          <div class="score hitScore">0</div>
+        </div>
+        <div class="col-md-6 text-center">
+          <div class="scoreboard">Missed</div>
+          <div class="score missScore">0</div>
+        </div>
+      </div>
+      <hr/>
+      <div class="row">
+        <div class="col-md-9 text-center">
           <div class="atlanticOcean"></div>
         </div>
-        <!-- <div class="col-md-3 text-center twitterBox">
-          <a class="twitter-timeline" href="https://twitter.com/hashtag/talklikeapirateday" data-widget-id="707648642568433664">#talklikeapirateday Tweets</a>
+        <div class="col-md-3 text-center">
+          <div>Testing</div>
+          <hr/>
+          <a class="twitter-timeline twitterBox" href="https://twitter.com/hashtag/talklikeapirateday" data-widget-id="707648642568433664">#talklikeapirateday Tweets</a>
           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
           </script>
-        </div> -->
+        </div>
       </div>
       <div class="row">
       <hr/>
