--- a/game.html
+++ b/game.html
@@ -45,26 +45,27 @@
       </div>
       <hr/>
       <div class="row">
-        <div class="col-md-6 text-center">
-          <div class="scoreboard">Hits!</div>
-          <div class="score hitScore">0</div>
-        </div>
-        <div class="col-md-6 text-center">
-          <div class="scoreboard">Missed</div>
-          <div class="score missScore">0</div>
-        </div>
-      </div>
-      <hr/>
-      <div class="row">
         <div class="col-md-9 text-center">
           <div class="atlanticOcean"></div>
         </div>
         <div class="col-md-3 text-center">
-          <div>Testing</div>
+          <div class="row">
+            <div class="col-md-12 text-center">
+              <div class="scoreboard">Hits!</div>
+              <div class="score hitScore">0</div>
+            </div>
+          </div>
           <hr/>
-          <a class="twitter-timeline twitterBox" href="https://twitter.com/hashtag/talklikeapirateday" data-widget-id="707648642568433664">#talklikeapirateday Tweets</a>
+          <div class="row">
+            <div class="col-md-12 text-center">
+              <div class="scoreboard">Missed</div>
+              <div class="score missScore">0</div>
+            </div>
+          </div>
+          <hr/>
+          <!-- <a class="twitter-timeline twitterBox" href="https://twitter.com/hashtag/talklikeapirateday" data-widget-id="707648642568433664">#talklikeapirateday Tweets</a>
           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
-          </script>
+          </script> -->
         </div>
       </div>
       <div class="row">
