--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://code.jquery.com/jquery-2.2.1.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/yeti/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" ></script>
+    <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
   </head>
 
   <body>
@@ -51,16 +52,16 @@
           <form class="" action="game.html" method="post">
             <div>
               <label for="">Name</label>
-              <input type="text" class="form-control" name="name" id="" placeholder="" required>
+              <input type="text" class="form-control" name="name" id="nameInput" placeholder="" required>
               </br>
               <label for="">Pirate Name (Optional)</label>
-              <input type="text" class="form-control" name="pirateName" id="" placeholder="">
+              <input type="text" class="form-control" name="pirateName" id="pirateName" placeholder="">
               </br>
               <label for="">How old are you?</label>
-              <input type="number" class="form-control" name="age" id="" placeholder="" required min="13">
+              <input type="number" class="form-control" name="age" id="age" placeholder="" required min="13">
               </br>
               <label for="">Enter Your Email</label>
-              <input type="email" class="form-control" name="email" id="" placeholder="" required>
+              <input type="email" class="form-control" name="email" id="email" placeholder="" required>
               </br></br>
               <button type="submit" class="btn btn-primary btn-lg btn-block" id="fightPirates">Go Fight Some Pirates!</button>
               </br>
@@ -68,6 +69,30 @@
           </form>
         </div>
       <div class="row">
+        <div class="col-md-12 text-center">
+          <!-- <div id='messagesDiv'></div> -->
+          <!-- <input type='text' id='nameInput' placeholder='Name'> -->
+          <input type='text' id='messageInput' placeholder='Message'>
+          <script>
+            var myDataRef = new Firebase('https://ippltfiad5h.firebaseio-demo.com/');
+            $('#messageInput').keypress(function (e) {
+              if (e.keyCode == 13) {
+                var name = $('#nameInput').val();
+                var pirateName = $('#pirateName').val();
+                var age = $('#age').val();
+                var age = $('#age').val();
+                var email = $('#email').val();
+                var text = $('#messageInput').val();
+                myDataRef.push({name: name, text: text, pirateName: pirateName, age: age, email: email});
+                $('#nameInput').val('');
+                $('#pirateName').val('');
+                $('#age').val('');
+                $('#email').val('');
+                $('#messageInput').val('');
+              }
+            });
+          </script>
+        </div>
         <div class="col-md-12 text-center"><p><small>&copy; Swab the decks.</small></p>
         </div>
         <div class="col-md-12 text-center"><p><small>Walking the plank in Seattle.</small></p>
