--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <li><a href="game.html">game.html</a></li>
             <li><a href="win.html">win.html</a></li>
             <li><a href="lose.html">lose.html</a></li>
+            <li><a href="users.html">users.html</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-->
