--- a/users.html
+++ b/users.html
@@ -38,39 +38,11 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <p class="talkingToPlayer">nice pirate tactics.</p>
-          <p class="won">NICE JOB!</p>
-          <p class="talkingToPlayer">You sunk all the ships! What a great pirate!</p>
+          <p>User Information Text</p>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-4"></div>
-        <div class="col-md-4">
-          <a href="game.html"><button href="/win.html"
-          type="submit" class="btn btn-primary btn-lg btn-block" id="fightPirates">Fight Again!</button></a>
-        </div>
-        <div class="col-md-4"></div>
-      </div>
+
     </div>
 
-
-<!-- Nice to have - links to social media (poss with message pre-populated) -->
-      <!-- <div class="row">
-        <div class="col-md-12 text-center">
-          <p>
-            <a href="www.facebook.com"><i class="fa fa-facebook-square fa-2x"></i></a>
-            <a href="www.twitter.com"><i class="fa fa-twitter fa-2x"></i></a>
-          </p>
-        </div>
-      </div> -->
-      <!-- Footer - maybe not on win/lose pages -->
-      <!-- <div class="row">
-        <div class="col-md-12 text-center"><p><small>&copy; Swab the decks.</small></p>
-        </div>
-        <div class="col-md-12 text-center"><p><small>Walking the plank in Seattle.</small></p>
-        </div>
-      </div>
-    </div> -->
-    <!-- <script type="text/javascript" src="script.js"></script> -->
   </body>
 </html>
