--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li><a href="">For Development Purposes Only</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="index.html">Index.html</a></li>
+            <li><a href="index.html">index.html</a></li>
             <li><a href="game.html">game.html</a></li>
             <li><a href="win.html">win.html</a></li>
             <li><a href="lose.html">lose.html</a></li>
@@ -64,7 +64,7 @@
               <label for="">Enter Your Email</label>
               <input type="email" class="form-control" name="email" id="email" placeholder="" required>
               </br></br>
-              <button type="submit" class="btn btn-primary btn-lg btn-block" id="fightPirates">Go Fight Some Pirates!</button>
+              <button type="submit" class="btn btn-primary btn-lg btn-block" id="submit-btn">Go Fight Some Pirates!</button>
               </br>
             </div>
           </form>
@@ -77,6 +77,7 @@
           <script>
             var myDataRef = new Firebase('https://ippltfiad5h.firebaseio-demo.com/');
             $('#messageInput').keypress(function (e) {
+              e.preventDefault();
               if (e.keyCode == 13) {
                 var name = $('#nameInput').val();
                 var pirateName = $('#pirateName').val();
@@ -85,12 +86,9 @@
                 var email = $('#email').val();
                 var text = $('#messageInput').val();
                 myDataRef.push({name: name, text: text, pirateName: pirateName, age: age, email: email});
-                $('#nameInput').val('');
-                $('#pirateName').val('');
-                $('#age').val('');
-                $('#email').val('');
-                $('#messageInput').val('');
+                $location = 'game.html';
               }
+              // evt.preventDefault();
             });
           </script>
         </div>
@@ -100,5 +98,6 @@
         </div>
       </div>
     </div>
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
