--- a/users.html
+++ b/users.html
@@ -26,7 +26,7 @@
             <li><a href="">For Development Purposes Only</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="index.html">Index.html</a></li>
+            <li><a href="index.html">index.html</a></li>
             <li><a href="game.html">game.html</a></li>
             <li><a href="win.html">win.html</a></li>
             <li><a href="lose.html">lose.html</a></li>
