--- a/lose.html
+++ b/lose.html
@@ -40,7 +40,7 @@
         <div class="col-md-12">
             <p class="talkingToPlayer">womp. womp.</p>
             <p class="lost">YOU LOST!</p>
-            <p class="talkingToPlayer">You didn't sink all the ships in time! You'll get them next time!</p>
+            <p class="talkingToPlayer">You missed too many times, your crew lost faith and mutinied!</p>
         </div>
       </div>
       <div class="row">
