removed nav bar from game, index, win, and lose

--- a/game.html
+++ b/game.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-default navbar-static-top" role="navigation">
+    <!-- <nav class="navbar navbar-default navbar-static-top" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
@@ -32,9 +32,9 @@
             <li><a href="lose.html">lose.html</a></li>
             <li><a href="users.html">users.html</a></li>
           </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-->
-    </nav>
+        </div>
+      </div>
+    </nav> -->
     <div class="container">
       <div class="page-header">
         <h1>Sink Some Ships!</h1>
