--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-default navbar-static-top" role="navigation">
+    <!-- <nav class="navbar navbar-default navbar-static-top" role="navigation">
       <div class="container-fluid">
         <div class="container-fluid">
         <div class="navbar-header">
@@ -33,9 +33,9 @@
             <li><a href="lose.html">lose.html</a></li>
             <li><a href="users.html">users.html</a></li>
           </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-->
-    </nav>
+        </div>
+      </div>
+    </nav> -->
     <div class="container">
       <div class="page-header">
         <h1>Swab the decks and sink some ships. <small>You know you want to.</small></h1>
